# rust-web-warp

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  log4rs.yaml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
k8s/: rustapp-api.yaml  rustapp-ingress.yaml
migration/: account.sql  answers.sql  questions.sql
src/: config.rs  main.rs  openai.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
