[package]
name = "rust-web-warp-learning"
version = "1.0.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
log = "0.4"
env_logger = "0.11.3"
log4rs = "1.0"
uuid = { version = "1.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-middleware = "0.3.1"
reqwest-retry = "0.5.0"
rand = "0.8"
rust-argon2 = "2.1"
paseto = "2.0"
chrono = "0.4.19"
config = { version = "0.14.0", features = ["toml"] }